# dram-viz

./: .gitignore  .pre-commit-config.yaml  README.md  definitions.py  environment.yml  make_product.py  pyproject.toml
.github/workflows/: ci.yaml
apps/: heatmap.py
data/: function_heatmap_form.tsv
dram2_viz/: __init__.py  __main__.py  definitions.py  make_product.py  model_helpers.py
dram2_viz/apps/: heatmap.py
dram2_viz/data/: function_heatmap_form.tsv
dram2_viz/processing/: process_annotations.py
dram_viz/: __init__.py  __main__.py  make_product.py
dram_viz/apps/: heatmap.py
dram_viz/data/: etc_module_database.tsv  module_step_form.tsv
dram_viz/processing/: process_annotations.py
models/: heatmap.py
processing/: process_annotations.py
tests/: conftest.py  test_heatmap.py  test_make_product.py  test_processing.py
tests/data/: etc_coverage_df.tsv  module_coverage_df.tsv  taxonomy_tree.json  test_annotations.tsv
